2005-04-12  Carl Worth  <cworth@cworth.org>

	* autogen.sh: Replace errant use of aclocal with $ACLOCAL, as
	reported by Martin Hedenfalk. Closes bug #3000.

2005-04-12  Carl Worth  <cworth@cworth.org>

	* src/cairo-pattern.c:
	* src/cairo-surface.c: (_cairo_surface_init): Default to
	CAIRO_FILTER_GOOD rather than CAIRO_FILTER_BEST.

	* src/cairo-pattern.c:
	(_cairo_pattern_acquire_surface_for_surface): Optimize to use
	CAIRO_FILTER_NEAREST when the pattern matrix is an integer
	translation.

2005-04-12  Carl Worth  <cworth@cworth.org>

	* src/cairo-pattern.c:
	(_cairo_pattern_acquire_surface_for_surface):
	* src/cairo-surface.c: (_cairo_surface_init): Use
	CAIRO_FILTER_BEST by default rather than CAIRO_FILTER_NEAREST.

2005-04-12  Carl Worth  <cworth@cworth.org>

	* src/cairo-gstate.c (_cairo_gstate_show_surface): Offset the src
	pattern by (0,0)->CTM. This fixes test/translate-show-surface.

	* src/cairo-glitz-surface.c
	(_cairo_glitz_surface_composite_trapezoids): Use unsigned cahr* to
	match new prototype for cairo_image_surface_create_for_data.

2005-04-11  Carl Worth  <cworth@cworth.org>

	* test/.cvsignore:
	* test/Makefile.am:
	* test/translate-show-surface-ref.png:
	* test/translate-show-surface.c: (draw), (main): Add new test
	demonstrating bug in the sequence: cairo_translate;
	cairo_show_surface.

2005-04-11  Carl Worth  <cworth@cworth.org>

	* src/cairo.c (cairo_select_font_face): Add deprecation alias from
	cairo_scale_font to cairo_set_font_size.

2005-04-11  Carl Worth  <cworth@cworth.org>

	* src/cairo.c (cairo_select_font_face): Add deprecation alias from
	cairo_select_font to cairo_select_font_face.

2005-04-11  Owen Taylor  <otaylor@redhat.com>

	* src/cairo.h doc/public/cairo-sections.txt 
	src/cairo-matrix.c: Update.

	* doc/public/cairo-docs.xml: Include cairo-font.xml
	
2005-04-08  Carl Worth  <cworth@cworth.org>

	* src/cairoint.h: 
	* src/cairo.h: Move include of pixman.h from cairo.h to cairoint.h